0-bak/minio/k8s/tenant-0/ingress-route-tenant-0-local.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: tenant-0-local
  namespace: tenant-0
spec:
  entryPoints:
    - web
  routes:
    # - match: Host(`env0.luojm.com`) && Path(`/k8s`)
    # - match: Host(`env0.luojm.com`) && PathPrefix(`/k8s`)
    - match: Host(`192.168.1.201`) 
      kind: Rule
      # middlewares:
      # - name: stripprefix-k8s
      #   namespace: kubernetes-dashboard
      # - name: https-only
      #   namespace: kubernetes-dashboard
      # - name: add-slash
      #   namespace: kubernetes-dashboard
      services:
      # - name: minio
      - name: tenant-0-hl
        kind: Service
        namespace: tenant-0
        port: 9000
